# ros_YOLOv3

./: README.md  requirements.txt
autorace_core_moryachki/: CMakeLists.txt  package.xml  setup.py
autorace_core_moryachki/launch/: autorace_core.launch  cross_node.launch  park_node.launch  turtlebot3_autorace_constr.launch  turtlebot3_autorace_tunnel.launch
autorace_core_moryachki/nodes/: autorace_core  core_launcher  core_node_mission  cross_node  park_node
camera/: CMakeLists.txt  package.xml
camera/calibration/extrinsic_calibration/: compensation.yaml
camera/launch/: extrinsic_camera_calibration.launch
detect/: CMakeLists.txt  package.xml
detect/launch/: detect_lane.launch
detect/param/lane/: lane.yaml
driving/: CMakeLists.txt  package.xml
driving/cfg/: dynamic.cfg
driving/launch/: amcl.launch  move_base.launch  move_base1.launch  turtlebot3_autorace_control_lane.launch  turtlebot3_autorace_control_tunnel.launch  turtlebot3_navigation.launch  turtlebot3_navigation1.launch  turtlebot3_slam.launch
driving/nodes/: constr  control_lane  tunnel
driving/param/: costmap_common_params_burger.yaml  costmap_common_params_burger1.yaml  dwa_local_planner_params_burger.yaml  dwa_local_planner_params_burger1.yaml
moryak_navigation/: CMakeLists.txt  package.xml
moryak_navigation/launch/: turtlebot3_navigation.launch
moryak_navigation/maps/: map.pgm  map.yaml
moryak_navigation/param/: base_local_planner_params.yaml  costmap_common_params_burger.yaml  costmap_common_params_waffle.yaml
moryak_slam/: CMakeLists.txt  package.xml
moryak_slam/launch/: turtlebot3_gmapping.launch  turtlebot3_slam.launch
vision/: CMakeLists.txt  package.xml  yolov3.cfg
vision/launch/: vision.launch
vision/nodes/: vision
vision/nodes/pytorchyolo/: detect_yolo.py  models_yolo.py
vision/nodes/pytorchyolo/utils/: transforms.py
