<?xml version="1.0"?>
<package format="2">
  <name>autorace_core_moryachki</name>
  <version>1.1.0</version>
  <description> 
    TurtleBot3 AutoRace ROS package that TurtleBot3 Auto driving
  </description>
  <license>Apache 2.0</license>
  <author email="korneich.nik@gmail.com">RUSSKI</author>
  <author>Ashe Kim</author>
  <maintainer email="dulda228@robotis.com">dulda</maintainer>
  <maintainer email="melovan1488@robotis.com">melovan</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>turtlebot3_autorace_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-enum34</exec_depend>

</package>
